--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             padding: 12px;
             text-align: right;
             border: 1px solid #ddd;
+            font-size: 13px;
         }
 
         th {
