--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             box-sizing: border-box;
             height: 35px !important;
             text-align: left !important;
+            outline: none !important;
         }
 
         button {
@@ -85,11 +86,19 @@
             color: black;
         }
         
+        
         #calculator{
             max-width: 95%;
             width: 100%;
             margin: 0 auto;
             box-sizing: border-box;
+        }
+        th.p-static {
+            background-color: #45A049; 
+        }
+
+        td.p-static {
+            background-color: #45A049; 
         }
 
          /* media query for responsive */
